# Generals64

./: .gitignore  CMakeLists.txt  Generals64.sln  README.md  SHADOW_PORT_STATUS.md  THIRD_PARTY_LICENSES.md  extract_big.py  package-lock.json  pch.h  readme_old.md  z_generals.vcxproj
Core/GameEngine/Include/Common/: AddonCompat.h  ArchiveFileSystem.h  AudioAffect.h  AudioEventInfo.h  AudioEventRTS.h  AudioHandleSpecialValues.h  AudioRequest.h  AudioSettings.h  CosmeticsCache.h  Debug.h  DynamicAudioEventInfo.h  Errors.h  FileSystem.h  FramePacer.h  FrameRateLimit.h  GameAudio.h  GameCommon.h  GameDefines.h  GameMemory.h  GameSounds.h  GameType.h  GameUtility.h  INI.h  LivePerf.h  LocalFile.h  MapObject.h  MiniDumper.h  ObjectStatusTypes.h  OptionPreferences.h  RAMFile.h  Radar.h  ReplaySimulation.h  STLTypedefs.h  SearchPaths.h  StreamingArchiveFile.h  Telemetry.h  UserPreferences.h  WorkerProcess.h  Xfer.h  XferCRC.h  (+4 more)
Core/GameEngine/Include/GameClient/: ClientInstance.h  Credits.h  DisplayStringManager.h  GameFont.h  GameText.h  GameWindow.h  GameWindowTransitions.h  GlobalLanguage.h  IMEManager.h  Keyboard.h  LoadScreen.h  MapUtil.h  Mouse.h  ParticleSys.h  ProcessAnimateWindow.h  RadiusDecal.h  SelectionInfo.h  Smudge.h  Snow.h  TerrainRoads.h  TerrainVisual.h  VideoPlayer.h  View.h  WindowVideoManager.h
Core/GameEngine/Include/GameNetwork/: ConnectionManager.h  DisconnectManager.h  DownloadManager.h  FirewallHelper.h  FrameData.h  FrameMetrics.h  GameInfo.h  GameSpyOverlay.h  GameSpyThread.h  LANAPI.h  LANAPICallbacks.h  LANGameInfo.h  LANPlayer.h  NAT.h  NetCommandMsg.h  NetPacketStructs.h  NetworkDefs.h  NetworkInterface.h  RestClient.h  Transport.h  udp.h
Core/GameEngine/Source/Common/: AddonCompat.cpp  CRCDebug.cpp  CosmeticsCache.cpp  FramePacer.cpp  FrameRateLimit.cpp  GameUtility.cpp  OptionPreferences.cpp  RandomValue.cpp  ReplaySimulation.cpp  SearchPaths.cpp  Telemetry.cpp  UserPreferences.cpp  WorkerProcess.cpp
Core/GameEngine/Source/GameClient/: ClientInstance.cpp  FXList.cpp  GameText.cpp  GlobalLanguage.cpp  LanguageFilter.cpp  MapUtil.cpp  RadiusDecal.cpp  SelectionInfo.cpp  Snow.cpp  View.cpp
Core/GameEngine/Source/GameNetwork/: Connection.cpp  ConnectionManager.cpp  DisconnectManager.cpp  DownloadManager.cpp  FirewallHelper.cpp  FrameMetrics.cpp  GameInfo.cpp  GameSpyStubs.cpp  IPEnumeration.cpp  LANAPI.cpp  LANAPICallbacks.cpp  LANAPIhandlers.cpp  LANGameInfo.cpp  NetCommandMsg.cpp  NetCommandWrapperList.cpp  NetPacket.cpp  Network.cpp  NetworkUtil.cpp  RestClient.cpp  Transport.cpp
Core/GameEngineDevice/Include/MilesAudioDevice/: MilesAudioManager.h
Core/GameEngineDevice/Source/MilesAudioDevice/: MilesAudioManager.cpp
Core/Libraries/Include/Lib/: BaseType.h  (+2 more)
GameData/: paths.txt
GameData/Data/INI/: GameData.ini  WindowTransitions.ini  multiplayer.ini
GameData/Window/Menus/: LanGameOptionsMenu.wnd  MainMenu.wnd  OptionsMenu.wnd  SkirmishGameOptionsMenu.wnd
GeneralsMD/: .gitignore
GeneralsMD/Code/Main/: BuildVersion.h  GeneratedVersion.h  RTS.RC  VideoEnhancer.cpp  VideoEnhancer.h  WinMain.cpp
Inspector/: AIPanels.cpp  AIPanels.h  DestructionTimeline.cpp  DestructionTimeline.h  HudPanels.cpp  HudPanels.h  Inspector.cpp  Inspector.h  Panels.cpp  Panels.h  ScriptPanel.cpp  ScriptPanel.h
Platform/: AniCursor.cpp  AniCursor.h  SDLAudioManager.cpp  SDLAudioManager.h  SDLGameEngine.cpp  SDLGameEngine.h  SDLKeyboard.cpp  SDLKeyboard.h  SDLMouse.cpp  SDLMouse.h  SDLPlatform.cpp  SDLPlatform.h
Renderer/: CMakeLists.txt  DebugDraw.cpp  DebugDraw.h  GPUParticles.cpp  GPUParticles.h  GpuMatrix.h  GpuTypes.h  RenderUtils.h  Renderer.cpp  Renderer.h
Renderer/Core/: Buffer.cpp  Buffer.h  Device.cpp  Device.h  RHITypes.h  Shader.cpp  Shader.h  ShaderCompiler.cpp  ShaderCompiler.h  Texture.cpp  Texture.h
Renderer/Core/Vulkan/: BufferVK.cpp  DeviceVK.cpp  ShaderVK.cpp  TextureVK.cpp  VmaImpl.cpp  VulkanPipeline.cpp  VulkanPipeline.h  VulkanUtil.cpp  VulkanUtil.h
Renderer/Math/: RenderMath.h
Renderer/Shaders/: ComputeShaderSource.h  GPUParticleShaders.h  ShaderSource.h  compile_shaders.cmake
Renderer/Shaders/HLSL/: GPUParticleRender.hlsl  GPUParticleUpdate.hlsl  Shader2D.hlsl  Shader3D.hlsl  ShaderCinematic.hlsl  ShaderDecal.hlsl  ShaderFSR.hlsl  ShaderFilmGrain.hlsl  ShaderGodRays.hlsl  ShaderLensFlare.hlsl  ShaderParticleFX.hlsl  ShaderPost.hlsl  ShaderShadowDepth.hlsl  ShaderSharpen.hlsl  ShaderShockwave.hlsl  ShaderSnow.hlsl  ShaderTiltShift.hlsl  ShaderVolumetric.hlsl
Renderer/Shaders/VulkanHLSL/: GPUParticleRender.hlsl  GPUParticleRender.hlsl.inc  GPUParticleUpdate.hlsl.inc  Shader2D.hlsl.inc  Shader3D.hlsl  Shader3D.hlsl.inc  ShaderCinematic.hlsl.inc  ShaderDebug.hlsl  ShaderDebug.hlsl.inc  ShaderDecal.hlsl.inc  ShaderFSR.hlsl.inc  ShaderFilmGrain.hlsl.inc  ShaderGodRays.hlsl  ShaderGodRays.hlsl.inc  ShaderLensFlare.hlsl.inc  ShaderParticleFX.hlsl  ShaderParticleFX.hlsl.inc  ShaderPost.hlsl  ShaderPost.hlsl.inc  ShaderShadowDepth.hlsl.inc  ShaderShadowMap.hlsl  ShaderShadowMap.hlsl.inc  ShaderShadowProjectedDecal.hlsl  ShaderShadowProjectedDecal.hlsl.inc  ShaderShadowVolumeDarken.hlsl  ShaderShadowVolumeDarken.hlsl.inc  ShaderShadowVolumeExtrude.hlsl  ShaderShadowVolumeExtrude.hlsl.inc  ShaderSharpen.hlsl  ShaderSharpen.hlsl.inc  ShaderShockwave.hlsl.inc  ShaderSnow.hlsl.inc  ShaderTiltShift.hlsl  ShaderTiltShift.hlsl.inc  ShaderVolumetric.hlsl.inc
Renderer/Shaders/scripts/: compile_spirv.py  extract_to_hlsl.py  generate_inc.py
Tests/: README.md  ShaderReflectionTest.cpp  ShadowMathTests.cpp
Tests/DesyncSim/: CrcCollector.cpp  CrcCollector.h  FakeNetwork.cpp  FakeNetwork.h  GameInstance.cpp  GameInstance.h  LockstepHarness.cpp  LockstepHarness.h  README.md  StubEngine.cpp  StubEngine.h  TestFramework.h  build.bat  out.txt  run_all.bat  test_fpu_mxcsr_determinism.cpp  test_lockstep_baseline.cpp  test_lockstep_injected_desync.cpp  test_pathfind_memo_cooldown.cpp  test_thread_race_shape.cpp  test_uninit_struct_shape.cpp  test_unordered_map_iteration.cpp
cmake/: sources.cmake
resources/gitinfo/: gitinfo.cpp  gitinfo.h
(+926 files in other folders)
